# physics-sim-engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  COMMIT_MSG.txt  LICENSE  NEXT_SESSION_START.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  README.md  vcpkg.json
benchmarks/: CMakeLists.txt
build_test/: PhysicsSimEngineConfig.cmake
cmake/: PhysicsSimEngineConfig.cmake.in
examples/: CMakeLists.txt  earth_moon_orbit.cpp  inner_solar_system.cpp  test_phase1.cpp  two_body_nbody.cpp
include/physim/core/: constants.hpp  frame.hpp  logging.hpp  time.hpp  types.hpp
include/physim/forces/: force.hpp  gravity.hpp  j2_gravity.hpp
include/physim/integrators/: integrator.hpp  rk4.hpp  rk45.hpp
include/physim/nbody/: nbody_system.hpp  particle.hpp
python/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: frame.cpp  logging.cpp  time.cpp  types.cpp
src/forces/: force.cpp  gravity.cpp  j2_gravity.cpp
src/integrators/: integrator.cpp  rk4.cpp  rk45.cpp
src/nbody/: nbody_system.cpp  particle.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_forces.cpp  test_integrators.cpp  test_nbody.cpp
