# Python bindings for physics simulation engine
# Phase 1: Placeholder - bindings will be added in Phase 9

find_package(pybind11 REQUIRED)

# Python module will be added as:
# pybind11_add_module(physim bindings.cpp)
# target_link_libraries(physim PRIVATE physim_core)

message(STATUS "Python bindings configuration complete (bindings will be added in Phase 9)")
