# Test suite for physics simulation engine
# Phase 1: Placeholder - tests will be added in Phase 2+

find_package(GTest REQUIRED)

enable_testing()

# Unit tests subdirectory
# add_subdirectory(unit)

# Integration tests subdirectory
# add_subdirectory(integration)

# Validation tests subdirectory
# add_subdirectory(validation)

message(STATUS "Test suite configuration complete (tests will be added in Phase 2)")
